# raytracer-rs

./: .gitignore  README.md
deserializer-derive/: Cargo.toml
deserializer-derive/src/: lib.rs
glslvec/: .gitignore  Cargo.toml
glslvec/src/: float_mul.rs  lib.rs  (+9 more)
gradient/: Cargo.toml
raytracer/: Architecture.txt  Cargo.toml
raytracer-lib/: Cargo.toml  callgrind.out.2493  exc  generate.py  nums
raytracer-lib/scripts/: ifs.rhai
raytracer-lib/src/: builder.rs  cacheable.rs  camera.rs  colours.rs  image.rs  intersection.rs  lib.rs  newscene.rs  ray.rs  raymarcher.rs  scene.rs  scenebuilder.rs  scenedata.rs  serialization.rs  vec.rs
raytracer-lib/src/engine/: image_desc.rs  image_size.rs  light_data.rs  mod.rs  objectdata.rs  raymarch_options.rs  raymarcher.rs  scene.rs  tracer.rs
raytracer-lib/src/light/: ambient.rs  directional.rs  fuzzy_directional.rs  mod.rs  point.rs  tint.rs  traits.rs
raytracer-lib/src/lights/: mod.rs  traits.rs
raytracer-lib/src/material/: colour.rs  mandelbulb_orbit_trap.rs  mirror.rs  mod.rs  normal.rs  origin_trap.rs  traits.rs
raytracer-lib/src/object/: bound.rs  box_obj.rs  cone.rs  cylinder.rs  hexagonal_prism.rs  hollow.rs  mandelbulb.rs  mod.rs  plane.rs  repeat.rs  rotate.rs  scripted_object.rs  sierpinski.rs  sphere.rs  torus.rs  traits.rs  transform.rs  translate.rs  triagonal_prism.rs  triangular_prism.rs
raytracer-lib/src/parser/: grammar.rs  mod.rs  object_deserialize.rs  scenebuilder.rs  vec_deserialize.rs
raytracer-lib/src/scripting/: cached_script.rs  engine.rs  mod.rs  swizzle.rs
raytracer-lib/src/serialize/: arcwrapper.rs  decl.rs  mod.rs  stubs.rs
scheduler/: Cargo.toml
src/: intersection.rs  main.rs  material.rs  ray.rs  tracer.rs  vec.rs
valarray/: Cargo.toml
vector/: Cargo.toml
(+45 files in other folders)
