[package]
name = "raytracer"
version = "0.1.0"
authors = ["swlynch <swlynch@uwaterloo.ca>"]

[lib]
name = "raytracer"
path = "src/lib.rs"

[profile.release]
lto = true
panic = 'abort'

[dependencies]
rand         = "0.4.1"
image        = "0.18.0"
gradient     = { path = "../gradient" }
pbr          = "1.0"
rhai         = { git = "https://github.com/jonathandturner/rhai" }
glslvec      = { path = "../glslvec" }
runtime-fmt  = "*"
futures      = "*"
futures-cpupool = "*"
