[package]
name = "raytracer"
version = "0.1.0"
authors = ["swlynch <swlynch@uwaterloo.ca>"]

[lib]
name = "raytracer"
path = "src/lib.rs"

[profile.release]
lto = true
panic = 'abort'

[dependencies]
rand         = "0.4.1"
image        = "0.18.0"
gradient     = { path = "../gradient", features=["serde"] }
pbr          = "1.0"
glslvec      = { path = "../glslvec", features=["serde"] }
runtime-fmt  = "0.3"
futures      = "0.1"
futures-cpupool = "0.1"

serde        = { version="1.0", features=["derive", "rc"] }
serde_json   = "*"
erased-serde = "*"
